--- a/vrworld-web/Frontend/package.json
+++ b/vrworld-web/Frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.0.1",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.2.0",
     "react-to-print": "^3.0.5"
   },
